change output directory

--- a/Timechko/Timechko.csproj
+++ b/Timechko/Timechko.csproj
@@ -7,6 +7,7 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <WasmMainJSPath>main.js</WasmMainJSPath>
         <Nullable>enable</Nullable>
+        <OutputPath>../bin</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
