--- a/docs/Timechko.runtimeconfig.json
+++ b/docs/Timechko.runtimeconfig.json
@@ -4,7 +4,7 @@
     "includedFrameworks": [
       {
         "name": "Microsoft.NETCore.App",
-        "version": "7.0.2"
+        "version": "7.0.3"
       }
     ],
     "configProperties": {
@@ -29,7 +29,7 @@
     "wasmHostProperties": {
       "runtimeArgs": [],
       "perHostConfig": [],
-      "mainAssembly": "Wasm.dll"
+      "mainAssembly": "Timechko.dll"
     }
   }
 }
